Re-designed the Execute SQL page to use tabs.
Converted all user interface code to use the new Webmin UI library, for a more consistent look.
---- Changes since 1.400 ----
Added a Module Config option to show databases and tables using just their names, which is much faster under MySQL 5 as it avoids the need to count their tables, fields and rows.
---- Changes since 1.410 ----
Display a more friendly error if a scheduled backup cannot be performed because MySQL is down.
The root password can be more easily change by the new 'Change Administration Password' page.
---- Changes since 1.420 ----
Display the number of tables and records created when executing SQL for a restore.
---- Changes since 1.430 ----
Improved the input for setting the default value for new fields, and added support for CURRENT_TIMESTAMP.
---- Changes since 1.440 ----
The correct character set is ready from my.cnf when connecting using DBI mode, thanks to jianxia.
The password is passed to all MySQL commands using the MYSQL_PWD environment variables on systems running MySQL 4.1 and later, version 5.1 in older Webmin releases.
---- Changes since 1.450 ----
Use DBI for listing databases and tables, to reduce dependency on the un-reliable MYSQL_PWD environment variable.
Fixed the input for setting the default value for fields.
---- Changes since 1.470 ----
Added code to detect a password in /root/.my.cnf which overrides the MYSQL_PWD variable, and thus causes login failures.
MySQL stored procedures are now included in backups, where supported.
---- Changes since 1.480 ----
Restores and imports from local files are now run as the Unix user configured for backups, rather than root.
---- Changes since 1.490 ----
The information_schema database is no longer included when backing up all databases, as it really just contains metadata.
---- Changes since 1.500 ----
Added a collation order field to the database creation form.