@@ -77,6 +77,7 @@ if ($module_info{'usermin'}) {
 		join(" ", split(/\0/, $in{'options'}));
 	$userconfig{'backup_compress_'.$in{'db'}} = $in{'compress'};
 	$userconfig{'backup_drop_'.$in{'db'}} = $in{'drop'};
+	$userconfig{'backup_single_'.$in{'db'}} = $in{'single'};
 	$userconfig{'backup_tables_'.$in{'db'}} = join(" ", @tables);
 	&write_file("$user_module_config_directory/config", \%userconfig);
 	}
@@ -93,6 +94,7 @@ else {
 		join(" ", split(/\0/, $in{'options'}));
 	$config{'backup_compress_'.$in{'db'}} = $in{'compress'};
 	$config{'backup_drop_'.$in{'db'}} = $in{'drop'};
+	$config{'backup_single_'.$in{'db'}} = $in{'single'};
 	$config{'backup_tables_'.$in{'db'}} = join(" ", @tables);
 	&write_file("$module_config_directory/config", \%config);
 	}
@@ -132,7 +134,7 @@ if (!$in{'save'}) {
 		local $err = &backup_database($db, $file, $in{'compress'},
 			$in{'drop'}, $in{'where_def'} ? undef : $in{'where'},
 			$in{'charset_def'} ? undef : $in{'charset'},
-			\@compat, \@tables, $access{'buser'});
+			\@compat, \@tables, $access{'buser'}, $in{'single'});
 		if ($err) {
 			print "$main::whatfailed : ",
 			      &text('backup_ebackup',"<pre>$err</pre>"),"<p>\n";
