@@ -90,3 +90,4 @@ Restores and imports from local files are now run as the Unix user configured fo
 The information_schema database is no longer included when backing up all databases, as it really just contains metadata.
 ---- Changes since 1.500 ----
 Added a collation order field to the database creation form.
+Added an option to the backup form to do backup in a single transaction, for InnoDB tables.
